--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
               <!--portfolio item start-->
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
-                  <div class="pirtfolio-img">
+                  <div class="portfolio-img">
                     <a
-                      href="http://127.0.0.1:5500/index.html#home"
+                      href="https://zafereqbal.github.io/Portfolio/"
                       target="_blank"
                       ><img src="img/logo1.png" alt="Project Image"
                     /></a>
